add H5 and CSS3 files

--- a/notes/移动端开发相关/响应式布局/响应式布局.md
+++ b/notes/移动端开发相关/响应式布局/响应式布局.md
@@ -73,11 +73,9 @@
 
 ## 2 交互简历
 
+###  整体页面基础布局
 
-
-### 2.1 页面基础布局
-
-#### 2.1.1 HTML结构
+HTML结构
 
 【1. 大盒子】
 
@@ -98,7 +96,11 @@
 </main>
 ```
 
-【3.1  加载页面布局】
+### 2.1 Loading模块
+
+#### 2.1.1 HTML结构
+
+【3.  加载页面布局】
 
 ```html
 <!--LOADING-->
@@ -122,9 +124,402 @@
 
 #### 2.1.2 CSS
 
-```css
+【1.导入less】
 
+```html
+<!--dev 开发环境下 -->	
+<link rel="stylesheet/less" type="text/css" href="css/index.less" />
+<script src="js/less-2.5.3.min.js"></script>
+<!-- REM计算 -->
 ```
 
+[2. 整体布局]
 
+```less
+@import "reset.min.less";
+
+html {
+    font-size: 100px;
+    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+    // font-family: "Microsoft JhengHei";
+    /*640px的设计稿 1rem=100px,响应式布局就改这里就好了*/
+}
+html,body {
+    height: 100%;
+    overflow: hidden;
+    background: #F4F4F4;
+}
+```
+
+【3. 加载页面的布局】
+
+```less
+/*container*/
+.mainBox {
+    margin: 0 auto;
+    max-width: 640px;
+    height: 100%;
+    background: #fff
+}
+
+
+/*公共样式*/
+.loadingBox{
+    // width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+/*LOADING BOX*/
+.loadingBox{
+    background: #000;
+    text-align: center;
+    color: #fff;
+    .title {
+        height: 1.4rem;
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        margin-top: -2.2rem;
+        
+    }
+
+    h1{
+        line-height: 0.75rem;
+        font-size: 0.5rem;
+       
+    }
+    
+    h3{
+        height: 0.45rem;
+        margin-top: 0.2rem;
+        color: #fff;
+        font-size:0.26rem;
+        
+        letter-spacing: 0.04rem;
+    }
+}
+```
+
+【4.计算屏幕尺寸，实现响应式布局】
+
+```javascript
+
+// 根据当前的设备宽度，动态计算出页面中元素的等比缩放
+		~function anonymous(){
+			let computedREM = function computedREM() {	
+				//获取设备视口宽度
+				let winW = document.documentElement.clientWidth;
+				//设计稿宽度
+				let desW = 640;
+				//计算+设置宽度
+				if(winW>=640){
+					document.documentElement.style.fontSize = "100px";
+					return;
+				} 
+				document.documentElement.style.fontSize = winW/desW*100+"px";
+			};
+			computedREM();
+			window.addEventListener('resize',computedREM);
+		}(window);
+```
+
+```tex
+虽然移动端（安卓&IOS）上的浏览器大部分都是WEBKIT内核的，但是由于很多手机操作系统版本过低（尤其是安卓手机），导致很多CSS3新特性不能有效识别，此时我们使用的大部分CSS3属性都要写两套才能兼容（加前缀的在前，不加的在后）
+ *  -webkit-animation
+ *  animation
+ *
+ * 太麻烦了，不过没关系，有JS插件可以帮我们搞定这件事情 (prefixfree.min.js）, 导入插件后，它会帮我们把所有需要加前缀的都加上
+	<script src="js/prefixfree.min.js"></script>
+```
+
+[5 使用css3实现进度条的动画效果]
+
+```less
+.progress{
+        position: absolute;
+        left: 50%;
+        margin-left: -2.3rem;
+        top: 50%;
+        margin-top: 1.15rem;
+        width: 4.6rem;
+        height: 0.3rem;
+        background: #fff;
+        border-radius: 0.15rem;
+
+        .current{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 0%;
+            // width: 0.3rem;
+            height: 100%;
+            // background: red;
+            // background: -webkit-linear-gradient(45deg);
+            // -webkit-background: -webkit-linear-gradient(left bottom ,#5cb85c 0% ,#5cb85c 25% ,#74c274 25%, #74c274 50%,#5cb85c 50%,#5cb85c 75%,#74c274 75%,#74c274 100%);
+            background: -webkit-linear-gradient(left bottom ,#5cb85c 0% ,#5cb85c 25% ,#74c274 25%, #74c274 50%,#5cb85c 50%,#5cb85c 75%,#74c274 75%,#74c274 100%);
+            // -webkit-animation: loadingMove 0.3s linear 0s infinite both;
+            animation: loadingMove 0.3s linear 0s infinite both;
+            
+            background-size: 0.3rem 0.3rem;
+            border-radius: 0.15rem;
+        }      
+    }
+
+@keyframes loadingMove{
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: 0 -.3rem;
+    }
+}
+```
+
+> 核心点：
+>
+> - 实现原理
+>
+>   将进度条分成一个一个的 小正方形，然后进行平铺
+>
+>   动画的实现（将这些小正方形向上平移，动画效果）
+>
+> - 核心实现点
+>
+>   ```css
+>   
+>   //设置背景的大小
+>   background-size: 0.3rem 0.3rem;
+>   
+>   //背景渐变
+>   // -webkit-linear-gradient ----线性渐变
+>   // （渐变的方向，渐变的颜色 渐变的位置，...）
+>   //渐变的方向 可以是 角度 45deg,或者是 上下左右 方向
+>   //（渐变颜色1 0%）-（渐变颜色1 25%）；  => 0%~25% 区域的颜色是 1
+>   background: -webkit-linear-gradient(left bottom ,#5cb85c 0% ,#5cb85c 25% ,#74c274 25%, #74c274 50%,#5cb85c 50%,#5cb85c 75%,#74c274 75%,#74c274 100%);
+>   
+>   //动画函数 ： 函数名 
+>   /*
+>   animation 
+>   animation-name	//规定需要绑定到选择器的 keyframe 名称（动画的函数名称）
+>   animation-duration	//规定完成动画所花费的时间，
+>   animation-timing-function	//规定动画的速度曲线
+>   animation-delay		//规定在动画开始之前的延迟。
+>   animation-iteration-count	//规定动画应该播放的次数。
+>   animation-direction		//动画的执行方向
+>   */
+>   animation: loadingMove 0.3s linear 0s infinite both;
+>   
+>   ```
+
+#### 2.1.3 js 
+
+【lpading的区域】
+
+​	LOADING的目的：提前加载项目所需文件
+
+```javascript
+//使用zepto
+<script scr='js/zepto.min.js'></script>
+<script>
+let loadingRender = (function(){
+    let $loadingBox = $('.loadingBox');
+    let $current = $loadingBox.find('.current');
+
+    let imgData = [...];
+    //run=> 预先加载图片
+    let run = function run(){
+        let  n =0;//已经加载的图片个数
+        let len = imgData.length;//所有的图片个数
+        //let current = n/len;//进度条的长度
+        imgData.forEach((item,index)=>{
+            let tempImg = new Image();
+            tempImg.onload = ()=>{
+                tempImg=null;
+                //n++;
+                $current.css('width',++n/len*100+'%');
+                //current 的width过度没有动画，效果生硬
+                //使用transition过渡动画解决
+                //在css中给current加上transition过度动画效果
+
+            };
+            tempImg.src=item;
+        });
+
+    };
+
+    return {
+        init:function(){
+            run();
+        }
+    }
+})();
+loadingRender.init();
+</script>
+```
+
+[模拟真实情况--考虑网络情况--以及数据未全部加载仍然可以进入应用]
+
+```javascript
+~let loadingRender = (function(){
+    let $loadingBox = $('.loadingBox');
+    let $current = $loadingBox.find('.current');
+    
+    //模拟数据，真实项目中需要通过服务器端获取
+	let imageData = [...];
+                     
+    let n =0;
+    let len = imgData.length;
+    
+    //理想状态下加载完成（网络正常，服务器数据正常加载完成）
+    let run = function run(callback){
+        //如何验证是否加载完了? img.src赋值成功就说明加载成功了
+        imageData.forEach(item=>{
+            let tempImg = new Image();
+            tempImg.onload = function(){
+              tempImg = null;
+              $current.css('width',++n/len*100+'%');
+            };
+            tempImg.src = item;
+        });
+        //理想状态下数据全部加载成功，我们让部分加载成功的定时器为null，并且执行完成方法 done（回调函数）
+        if(n===len){
+            clearTimer(delayTimer);
+            callback&&callback();
+        }        
+    };
+    //网络不佳，但是数据加载了大部分，我们让其可以正常执行
+    let delayTimer = null;
+    let maxDelay = function maxDelay(callback){
+        delayTimer = setTimeout(function(){
+             //假设我们允许的数据加载量是 90%             
+       		if(n/len>=0.9){
+            //这里需要注意的一点就是，没加载完，进度条显示不完整，直接跳转的话对用户的交互不是很好，所以在这里我们直接将 进度条的进度设置为100%
+            $current.css('width','100%');
+            callback&&callback();
+            return;
+        }
+            //如果不满足我们设定的最低数据加载量，提示用户，并报404错误
+            alert('当前网络状态不佳，请稍后再试');           				window.location.href='https://github.com/BigSpinach';
+        },10000);
+    };
+	//不管加载完，加载不完，最终都会执行的操作（移除页面中的加载页面）
+    let done = function done(){
+        //为了防止加载完成数据了，直接进入页面，让用户没有感受到加载完了
+        //所以在这里设置一个1s的延迟，增强用户体验
+        let timer=setTimeout(function(){
+            $.loadingBox.remove();
+        },1000);                
+    };
+                     
+    return {
+        init:function(){
+    		run(done);        
+            maxDelay(done);
+        }
+    }
+})();
+loadingRender.init();
+```
+
+#### hash 路由的原型
+
+​	课题引入：为了测试我们当前开发的页面，我们通过hash地址来判断当前的页面,从而确定要进入的模块（都是基于模块（单例模式）开发的）
+
+```javascript
+//获取当前浏览器窗口的url
+let url = window.location.href;
+//获取hash值（#后边的部分）
+let well = url.indexOf('#');
+let hash =well===-1? null : url.sutstr(well+1);
+//通过hash值的不同，执行不同的模块
+switch(hash){
+    case 'loading':	
+        loadingRender.init();
+        break;
+    case 'phone':
+        phoneRender.init();
+        break;
+}
+```
+
+[开发技巧css部分]
+
+通过给公共样式设置 `display：none`，让所有的板块都隐藏
+
+开发那个板块就 将哪个板块的 样式单独设置为 `dispaly：block`
+
+### 2.2 phone模块
+
+#### 2.2.1  html 结构
+
+```html
+<section class="phoneBox">
+			<div class="phoneTitle">
+				<h2>大菠菜</h2>
+				<h3>BigSpinach</h3>
+				<!-- 通话时长 -->
+				<span>00:00</span>
+			</div>
+
+			<!-- 接听电话box -->
+			<div class="answerBox">
+				<!-- 提醒我 -->
+				<a href="javascript:;" class="alarmClick">
+					<div><img src="" alt="alarm"></div>
+				</a>
+				<!-- 发短息 -->
+				<a href="javascript:;" class="messageClick">
+					<div><img src="" alt="message"></div>
+				</a>
+				<!-- 挂断 -->
+				<a href="javascript:;" class="hangUpClick">
+					<div><img src="" alt="hangUp"></div>
+				</a>
+				<!-- 接听 -->
+				<a href="javascript:;" class="answerClick">
+					<div><img src="" alt="answer"></div>
+				</a>
+			</div>
+			<div class="hangUpBox">
+				<ul class="menuBox">
+					<li>
+						<div>mute</div>
+					</li>
+					<li>
+						<div>keybord</div>
+					</li>
+					<li>
+						<div>speaker</div>
+					</li>
+					<li>
+						<div>addMore</div>
+					</li>
+					<li>
+						<div>faceTime</div>
+					</li>
+					<li>
+						<div>contacts</div>
+					</li>
+				</ul>
+				<a href="javascript:;" class="hangUpclick">
+					<div class="hangUp">
+						<img src="" alt="hangUp">
+						<span>了解详情</span>
+					</div>
+				</a>
+			</div>
+			 <!--AUDIO-->
+			 <audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
+			 <audio src="audio/say.mp3" preload="none" id="introduction"></audio>
+		</section>
+```
+
+#### 2.2.2 css样式
+
+```less
+
+```
 
