add H5 CSS3 demo

--- a/notes/移动端开发相关/响应式布局/响应式布局.md
+++ b/notes/移动端开发相关/响应式布局/响应式布局.md
@@ -515,11 +515,158 @@ switch(hash){
 			 <audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
 			 <audio src="audio/say.mp3" preload="none" id="introduction"></audio>
 		</section>
+
 ```
+
+​	
+
+```html
+<section class="phoneBox">
+        <h2>
+            <img src="img/zf_phoneLogo.png" alt="">
+            <span>00:00</span>
+        </h2>
+        <div class="answer">
+            <!-- 这个div用于展示接听电话按钮的动画效果 -->
+            <div class="markMove"></div>
+            <!-- a标签用于实现点击接听 -->
+            <a href="javascript:;" class="markLink"></a>
+        </div>
+        <div class="hang">
+            <!-- 点击挂断按钮实现功能 -->
+            <a href="javascript:;" class="markLink"></a>
+        </div>
+        <!--AUDIO-->
+        <audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
+        <audio src="audio/say.mp3" preload="none" id="introduction"></audio>
+</section>
+```
+
+
+
+
 
 #### 2.2.2 css样式
 
+[phoneTitleBox]
+
 ```less
+.phoneTitle {
+        position: absolute;
+        left: 50%;
+        margin-left: -1.31rem;
+        top: 0.5rem;
+        width: 2.62rem;
+        height: 1.25rem;
+        color: #fff;
+        text-align: center;
+
+        h2 {
+            height: 0.8rem;
+            width: 100%;
+            font-size: 0.45rem;
+            line-height: 0.45rem;
+        }
+
+        h3 {
+            height: 0.45rem;
+            width: 100%;
+            font-size: 0.15rem;
+            line-height: 0.15rem;
+            color: #F4F4F4;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap cursor: pointer;
+        }
+
+        h3:hover {
+            color: blue;
+        }
+
+        span {
+            top: 1.85rem;
+            line-height: 0.3rem;
+            font-size: 0.3rem;
+            //文字间距
+            letter-spacing: 0.05rem;
+            margin-top: 0.1rem;
+            display: none;
+        }
+    }
+```
+
+[answerBox]
+
+```less
+ .answerBox {
+        width: 5.2rem;
+        height: 3.6rem;
+        position: absolute;
+        bottom: 0.3rem;
+        left: 50%;
+        margin-left: -2.6rem;
+        color: #fff;
+        background: url("../img/zf_phoneListen.png") no-repeat;
+        background-size: 100% 100%;
+
+        .markMove {
+            //遮罩层效果（动画实现）
+            //大小跟接听按钮一般大小
+            position: absolute;
+            right: -0.066rem;
+            bottom: 0.459rem;
+            width: 1.6rem;
+            height: 1.6rem;
+            border: .03rem solid #0F0;
+            border-radius: 0.8rem;
+            //border-radius: 50%;
+            animation: answerMove 1s linear 0s infinite both;
+            //这样动画效果实现了，但是 它在背景图的上方，我们应该改变它的z-index值让它居于 背景图的下方即可
+            z-index: -1;
+        }
+
+        .markLink {
+            .markMove; //把.markMove的东西继承过来
+            z-index: 1;
+            // background: red;
+            border: 0;
+            // border-radius:0;
+            animation: null;
+        }
+    }
+```
+
+[hangUpBox]
+
+```less
+.hangUpBox {
+        position: absolute;
+        bottom: .3rem;
+        left: 50%;
+        margin-left: -2.6rem;
+        width: 5.2rem;
+        height: 6.59rem;
+        background: url('../img/zf_phoneDetail.png') no-repeat;
+        background-size: 100% 100%;
+        //=>初始位置是在PHONE的底部（看不见：溢出内容隐藏），当点击接听按钮后，控制它从底下出来即可（JS中改变样式） “我们可以基于TRANSFORM改变样式的尽量不要使用传统的样式属性，因为TRANSFORM操作开启了浏览器的硬件加速，性能更高一些”
+        transform: translateY(6.89rem);
+        transition: .3s;
+
+        .markLink {
+            position: absolute;
+            bottom: .26rem;
+            left: 50%;
+            z-index: 1;
+            margin-left: -.8rem;
+            width: 1.6rem;
+            height: 1.6rem;
+        }
+    }
+```
+
+#### 2.2.3 js
+
+```javascript
 
 ```
 
