add some H5 and CSS3 files

--- a/notes/移动端开发相关/移动端事件/移动端事件.md
+++ b/notes/移动端开发相关/移动端事件/移动端事件.md
@@ -10,13 +10,21 @@
 
 # 移动端事件
 
-touchStart
+## 标准事件
 
-touchMove
+### touchStart
 
-touchEnd
+### touchMove
+
+### touchEnd
 
 移动端事件对象 touchEvent
+
+## 监听事件
+
+
+
+​	
 
 `changedTouches` 手指操作的信息集合，集合中记录了每一根操作的手指的相关信息（包含触发点的坐标位置），touches记录的信息只有手指在屏幕上才有，也就是手指离开屏幕的时候信息就消失了，changedTouches本意上记录的是改变的值，即使手指离开，信息值也在
 
@@ -170,4 +178,33 @@ $box.longTap(ev => {
 > 1.ZEPTO没有考虑浏览器的兼容，专门为移动端开发的小型类库，也仅仅是把JQ中的一些常规方法实现了，很多方法也没有实现（例如：slideDown/show...在ZEPTO中都没有） =>为了保证ZEPTO的体积足够小
 
 > 2.ZEPTO中提供了移动端专门操作的事件方法(例如：tap等)，这些方法都是基于移动端的TOUCH和GESTURE事件模型封装好的方法，JQ中并没有提供这些方法 =>ZEPTO更适合移动端
+
+## 3. zepto 中的监听事件
+
+### 3.1 `transitionend`
+
+```javascript
+$box.on('transition',()=>{
+    //transition 监听 $box中transition动画执行了几次
+    //执行几次的决定性因素在于 $box的几个css样式属性发生了改变
+    //有几个样式属性发生改变，就执行几次
+    //
+    //所以，对于一些我们想要实现根据动画是否执行完成的transition属性的监听，我们只希望它执行一次
+    //so 改用 one
+})
+```
+
+```javascript
+$box.css({
+    width:250,
+    hieght:250,
+    transfrom:transfromX(0)
+}).on('transitonEnd',()=>{
+    //方法执行三次 ，因为上边有三个属性发生了改变
+})
+```
+
+
+
+
 
