--- a/notes/移动端开发相关/响应式布局/响应式布局.md
+++ b/notes/移动端开发相关/响应式布局/响应式布局.md
@@ -670,3 +670,267 @@ switch(hash){
 
 ```
 
+
+
+
+
+
+
+## 3. viewport
+
+课题引入
+
+> - pc端：html页面的宽度始终跟浏览器的宽度一致（当我们放大缩小浏览器窗口大小的时候没救会发现），也就是在浏览器宽度的视口中渲染和呈现我们的页面
+>
+> - 移动端：不管移动端设备（代指打开的浏览器）的宽度是多少，HTML的宽度是980（或者1024），问题来了，（小窗口中展示大页面），结果就是，页面中的内容都缩放了
+>
+> - 【解决方案】
+>
+>   只要让HTML的页面跟设备宽度保持一致即可
+>
+>   ```html
+>   <!-- 增加viewpoint 视口宽度说明 -->
+>   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+>   ```
+
+【viewport】
+
+![1555617193617](C:\Users\82113\AppData\Roaming\Typora\typora-user-images\1555617193617.png)
+
+
+
+layout viewport : 布局（页面）视口（和css开发先关）
+
+![1555616928397](C:\Users\82113\AppData\Roaming\Typora\typora-user-images\1555616928397.png)
+
+visual viewport ：手机视口
+
+![1555616984665](C:\Users\82113\AppData\Roaming\Typora\typora-user-images\1555616984665.png)
+
+indel viewport ：理想视口
+
+
+
+【概念明确】
+
++ HTML的页面宽度大于设备的宽度  ===> 页面中的内容缩放显示
+
++ HTML页面内容的宽度大于HTML的宽度   ===> 出现横向滚动条
+
++ 真实项目中是不允许内容的宽度超过HTML页面的宽度的（不出现横向滚动条）
+
+  
+
+  所以移动端开发的技巧：外层盒子的宽度都是百分比设定的
+
+  【流式响应布局】
+
+  
+
+###  3.1 viewport的添加方式
+
+[html页面中增加]
+
+```html
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+```
+
+[js动态创建]
+
+```javascript
+let metaViewport = document.creatElement('meta');
+metaViewport.name = 'viewport';
+metaViewport.content = 'width=device-width, initial-scale=1.0';
+document.head.appendChild(metaViewport);
+```
+
+### 3.2 流式响应布局法
+
+核心：外层盒子容器的宽度都是百分比设定的
+
+
+
+### 3.3 移动端项目常用操作方案
+
+#### 3.3.1 PC和移动端公用一套项目
+
+【设计师一般只给一套设计稿】
+
+> 结构相对简单：一般都是展示类网站
+
+【开发思路】
+
+ 1. 先做PC端的（因为设计师给的就是PC端的）
+
+    + 一般宽度都是自适应的（具体情况不同）
+
+ 2. 切换到手机端
+
+    + 使用@media 把不同设备的不合适样式进行修改
+
+    
+
+#### 3.3.2 PC和移动端分开做
+
+【设计师会给2套设计稿】
+
+PC单独做：不需要考虑响应式布局
+
+​	固定布局
+
+移动单独做：只需要考虑移动端的响应适配即可（一般给的设计稿都是640*1136 （980* X 不定宽度））、750*1337
+
+设计稿的尺寸比手机屏幕的尺寸大了一倍？目的是保证切下来的图都是大图
+
+为什么要大图？很多手机都是二倍及三倍屏幕像素密度比**DPR** 的
+
+即使给的是二倍设计稿，但是部分手机的设备尺寸要大于设计稿的一半，有的手机是3倍DPR,这就导致一个问题：部分图片还是会变的模糊一点，此时就单独找设计师要一张就行了
+
+​	DPR(屏幕像素比)
+
+> 布局宽度：css设置的宽度  1px*1px
+>
+> 屏幕尺寸 320*480 ，
+>
+> 分辨率： 640*960： 一个320**480的屏幕拥有 640*x960的分辨率
+>
+> ​	那么 ，我们之前设计的 css（1px*1px）在页面中就是 由 2x2个像素展示出来的
+>
+> ![1555622781402](C:\Users\82113\AppData\Roaming\Typora\typora-user-images\1555622781402.png)
+
+注意：	**我们操作的是css屋里像素，而手机渲染的是分辨率**
+
+响应式布局
+
+​	（1）依然可以基于`@meida`(麻烦一点)
+
+​	 （2）固定布局（viewport=> width=320px）
+
+​		按照设计稿把320px的尺寸的写好即可（所有的尺寸都可以固定，而且都是设计稿的一半【因为设计稿是大一倍的】），在其他的设备上让320的页面居中显示，两边都是空白
+
+​	（3）scale等比缩放布局（淘宝这么搞的）
+
+​		严格按照设计稿的尺寸来写，（设计稿个都是大一倍的【没有自适应的宽度，都是固定的值】，在其他设备上，首先获取设备的宽度，让其除以设计稿的宽度，然后让原始写好的页面按照这个比例整体缩小即可），
+
+```javascript
+//在页面中使用js控制缩放比例
+window.addEventListener('load',()=>{
+   let container = document.querySelector('.container') ;
+   let winWidth = document.documentElement.cloentWidth;
+   //重新计算设置当前设备的缩放比例
+    container.style.transform=`scale(${winWidth/750})`;
+    //750是我们第一次写的文件的宽度
+});
+//这样动态控制了还不够 ，还用改在css中控制 缩放 的方向
+
+```
+
+```css
+.container{
+    ...
+    transfrom-origin: left top;
+    //从左上角开始缩放
+}
+```
+
+缩放会导致一个问题：字体模糊
+
+​	（4）rem等比缩放
+
+​	最终版：它是参考scale，只是 用的rem单位来实现等比缩放
+
+​	严格按照设计稿尺寸编写（但是宽度一般让其自适应）
+
+```html
+<style>
+	html{
+   		font-size:100px;
+	}
+</style>
+<script>
+    window.addEventListener('load,resize'()=>{
+      	let HTML = document.documentElement ;
+   	  	let winWidth = HTML.cloentWidth;
+      	HTML.style.fontSize = `${winWidth/750*100}`;
+      //重新调整HTML字体的大小，
+    });
+</script>
+```
+
+  （5）CSS3中提供了flex-box 伸缩盒子模型，基于这个属性，可以让某些效果处理起来更加方便
+
+
+
+### 3.4 `@media` 【官方提供的响应式解决方案】
+
+我们可以把`@media`理解为`JS`中的条件判断（在不同的设备中使用不同的css样式进行渲染）
+
+【语法】
+
+
+
+```css
+.box{
+    width:500px;
+    heigth:500px;
+    bachground:green;
+}
+
+/*@media
+
+	@media [媒体设备]
+		* all（所有设备）
+		* screen 所有屏幕设备 （PC和电脑）
+		* print 打印机设备
+		* ...
+	@media [媒体设备] and (媒体条件) and (媒体条件) and ...
+		* 媒体条件 max-width :480px
+
+	写的时候一般讲最大屏幕的写在最上边
+
+*/
+@media all and (max-width:960px){
+    /*
+    	当前设备宽度小于等于 960px
+    */
+    .box{
+        width:700px;
+        hieght:700px;
+        background:black;
+    }
+}
+
+@media all and (max-width:480px){
+    /*
+    	当前设备宽度小于等于 480px
+    */
+    .box{
+        width:200px;
+        hieght:200px;
+        background:red;
+    }
+}
+
+
+
+/*orientation：控制屏幕的方向*/
+@media screen and (orientation:portrait){
+    /*
+    orientation ：屏幕的方向
+     portrait：竖屏（指定输出设备中的页面课件区域的高度大于或等于宽度）
+     landscape ：横屏
+    */
+    body{
+    	background:gray;
+	}  
+}
+
+@media screen and (orientation:landscape){
+    body{
+    	background:yellow;
+	}  
+}
+```
+
+
+
