--- a/notes/JavaScript/事件/定时器.md
+++ b/notes/JavaScript/事件/定时器.md
@@ -24,7 +24,13 @@
 
 
 ```javascript
+ setTimeout(function(){
+    console.log(1);
+  },1000);
 
+ setInterval(()=>{
+    console.log(2);
+  },1000);
 
 ```
 
@@ -32,17 +38,27 @@
 
 ` clearTimeout / clearInterval`：
 
-​	这两个方法中的任何一个都可以清除用任何方法创建的定时器
+​	**这两个方法中的任何一个都可以清除用任何方法创建的定时器**
 
 ```javascript
+let timer_out = setTimeout(() => {
+    console.log(1)
+  }, 1000);
+  let timer_interval = setInterval(() => {
+    console.log(2);
+  }, 1000);
 
+  console.log(timer_out, timer_interval);//1 2
+  
+clearTimeout(timer_interval);
+ clearInterval(timer_out);
 ```
 
 清除定时器的原理
 
-1. 设置定时器会有一个返回值，这个值是一个数字，属于定时器的编号，代表当前是第几个定时器（不管是基于setTimeout还是setInterval创建定时器，这个编号会累加）
+1. 设置定时器会有一个返回值，这个值是一个数字，属于定时器的编号，代表当前是第几个定时器（不管是基于`setTimeout`还是`setInterval`创建定时器，这个编号会累加）
 
-2. clearTimeout([序号])/clearInterval([序号])：根据序号清除浏览器中设定的定时器
+2. `clearTimeout([序号])`/`clearInterval([序号])`：根据序号清除浏览器中设定的定时器
 
 【测试程序反应时间】
 
@@ -58,6 +74,65 @@ console.time('AA');
 //要测试的code...
 console.timeEnd('AA');
 ```
+
+
+
+
+
+【定时器-异步编程】
+
+```javascript
+let count = 0;
+  setTimeout(()=>{
+    count++;
+    console.log(count);
+  });
+  console.log(count);
+
+//执行结果
+//先输出0 再输出1 
+```
+
+
+
+【js中的异步编程】
+
++ 事件绑定
++ 定时器
++ ajax
++ 回调函数也算（机制貌似异步编程）
+
+
+
+【关于定时器设定的时间问题】
+
+```javascript
+ let n = 0;
+  setTimeout(()=>{
+    console.log(++n);
+  },1000);
+  console.log(n);
+}
+while(1===1){
+  //死循环
+}
+
+//输出结果只是  0 
+//浏览器  卡死
+
+//虽然定时器设定了1秒后执行，但是浏览器当前同步队列任务（js的同步代码部分为执行完，也就是while死循环一直执行）还没有执行完，所以导致定时器的代码不能执行
+```
+
+
+
+
+
+【浏览器是如何规划同步异步机制的】
+
++ 浏览器（一个进程）是多线程，js是浏览器多线程中的一个线程
+  单线程的特点：一次只能处理一件事情
++ js在单线程中实现异步操作的机制：任务队列
+  任务队列分为**主任务队列**和**等待任务队列**
 
 
 
