--- a/notes/JavaScript/基础语法/03-闭包.md
+++ b/notes/JavaScript/基础语法/03-闭包.md
@@ -1,4 +1,4 @@
-##03-闭包作用域（scope）
+## 03-闭包作用域（scope）
 
 ### 3.1    作用域处理机制 
 
@@ -321,7 +321,7 @@ Zepto.xxx();
 
 
 
-####3.2.1 JQ源码分析
+#### 3.2.1 JQ源码分析
 
 闭包具有“保护”作用：保护私有变量不受外界的干扰
 
@@ -439,12 +439,12 @@ for (let i = 0; i < tabList.length; i++) {
 
 
 
-####3.2.3 面试题练习  
+#### 3.2.3 面试题练习  
 
 【1】
 
 ```javascript
-console.log(a, b, c);//=>undefined * 3
+console.log(a, b, c);//=>undefined undefined undefined
 var a = 10,
     b = 10,
     c = 10;
@@ -452,7 +452,7 @@ var a = 10,
 function fn(a) {
     console.log(a, b, c);//=>10 undefined 10
     var b = a = c = 100;
-    console.log(a, b, c);//=>100 * 3
+    console.log(a, b, c);//=>100 100 100
 }
 
 fn(10, 20);
@@ -579,4 +579,5 @@ console.log(i);//=>Uncaught ReferenceError: i is not defined*/
 
 
 
-####3.3.3 const
+#### 3.3.3 const
+
